syntax = "proto3";

package envoy.config.retry.response_headers.v2;

import "udpa/annotations/migrate.proto";

option java_package = "io.envoyproxy.envoy.config.retry.response_headers.v2";
option java_outer_classname = "ResponseHeadersConfigProto";
option java_multiple_files = true;
option (udpa.annotations.file_migrate).move_to_package =
    "envoy.extensions.retry.header.response_headers.v3";

message ResponseHeadersConfig {
}
